# bffile

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  justfile  model.md  pyproject.toml  validate_zarr.py  zensical.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  prek.yml
docs/: api.md  index.md  usage.md
scripts/: benchmark_reopen.py  benchmark_thumbnail.py  fetch_test_data.py  genstubs.py  napari_view.py  ndv_view.py  stubgen.py  sync_test_data.py
src/bffile/: __init__.py  _biofile.py  _core_metadata.py  _imread.py  _java_stuff.py  _jimports.py  _lazy_array.py  _series.py  _utils.py  _zarr_group_store.py  _zarr_store.py
src/bffile/_stubs/: _IFormatHandler.pyi  _IFormatReader.pyi  _IMetadataConfigurable.pyi
src/bffile/_zarr/: __init__.py  _array_store.py  _base_store.py  _group_store.py
tests/: conftest.py  test_bffile.py  test_biofile.py  test_dask.py  test_java_constraints.py  test_lazy_array.py  test_lazy_array_series.py  test_lifecycle.py  test_series.py  test_utils.py  test_xarray.py  test_zarr_group_store.py  test_zarr_store.py
typings/java/: __init__.pyi
