[project]
name = "bioformats-root"
dynamic = ["version", "dependencies"]
description = "bioformats monorepo"
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
test = ["pytest>=8.3.5", "pytest-cov>=6.1.1", "requests>=2.32.3"]
dev = [
    { include-group = "test" },
    "bioformats",
    "ipython>=8.18.1",
    "mypy>=1.15.0",
    "pdbpp>=0.11.6 ; sys_platform != 'win32'",
    "pre-commit>=4.2.0",
    "pyright>=1.1.399",
    "rich>=14.0.0",
    "ruff>=0.11.6",
]

[tool.uv.sources]
bioformats = { workspace = true }
bioformats-bsd = { workspace = true }

[tool.uv.workspace]
members = ["packages/bioformats", "packages/bioformats-bsd"]

# https://docs.astral.sh/ruff
[tool.ruff]
line-length = 88
target-version = "py39"
src = ["src"]

# https://docs.astral.sh/ruff/rules
[tool.ruff.lint]
pydocstyle = { convention = "numpy" }
select = [
    "E",    # style errors
    "W",    # style warnings
    "F",    # flakes
    "D417", # Missing argument descriptions in Docstrings
    "I",    # isort
    "UP",   # pyupgrade
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "RUF",  # ruff-specific rules
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
]
ignore = [
    "D401", # First line should be in imperative mood (remove to opt in)
]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["D", "S"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = false # default is false

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/"
strict = true
disallow_any_generics = false
disallow_subclassing_any = false
show_error_codes = true
pretty = true

# https://docs.pytest.org/
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
filterwarnings = ["error"]

# https://coverage.readthedocs.io/
[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "\\.\\.\\.",
    "raise NotImplementedError()",
    "pass",
]

[tool.coverage.run]
source = ["bioformats"]

[tool.check-manifest]
ignore = [".pre-commit-config.yaml", ".ruff_cache/**/*", "tests/**/*"]

[tool.typos.default]
extend-ignore-identifiers-re = ["(?i)nd2?.*", "(?i)ome", "AIMD"]
